[package]
name = "quilt"
authors = ["Nathaniel Fernandes <nathaniel.s.fernandes@gmail.com>"]
version = "0.1.1"
edition = "2021"

[lib]
name = "quilt"

[features]
default = ["disassembler", "qstd", "serde_docs", "arc"]
serde_docs = ["interpreter/serde_docs"]
arc = ["common/arc"]

[dependencies]
common = { path = "./common" }
parser = { path = "./parser" }
bytecode = { path = "./bytecode" }
compiler = { path = "./compiler" }
interpreter = { path = "./interpreter" }
qstd = { path = "./qstd", optional = true }
disassembler = { path = "./disassembler", optional = true }

[workspace]
members = [
    "common",
    "parser",
    "bytecode",
    "compiler",
    "interpreter",
    "disassembler",
    "qstd",
]
exclude = ["cli"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
