[package]
name = "common"
authors = ["Nathaniel Fernandes <nathaniel.s.fernandes@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
arc = ["dep:atomic_refcell"]


[dependencies]
ariadne = "0.1.5"
thiserror = "1.0.40"
fxhash = "0.2.1"
atomic_refcell = { version = "0.1.13", optional = true }
