[package]
name = "interpreter"
authors = ["Nathaniel Fernandes <nathaniel.s.fernandes@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde_docs = ["dep:serde"]

[dependencies]
common = { path = "../common" }
bytecode = { path = "../bytecode" }
fxhash = "0.2.1"
arrayvec = "0.7.2"
paste = "1.0.12"

serde = { version = "1.0.192", features = ["derive"], optional = true }
